Fix overflow v2

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,12 +1,12 @@
 body {
     background-color: #0F0F0F;
     margin: 0;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
 
 html {
     scroll-behavior: smooth;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
     overflow-y: hidden;
 }
 
